<?xml version="1.0"?>
<package>
  <name>buggy_controller</name>
  <version>0.0.0</version>
  <description>The buggy_controller package</description>
  <maintainer email="denzist@gmail.com">Denis Shepelev</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>control_msgs</run_depend>
  <build_depend>control_msgs</build_depend>


  <export>

  </export>
</package>